index.css
/*When the chat component is closed, use .cognigy-web-chat, else use cognigy-web-chat__open*/
.cognigy-outer-container__closed {
  opacity: 0;
  transition: all .200s ease-in
}

.cognigy-outer-container__open, .cognigy-outer-container__closed {
  display: -ms-flexbox;
	-ms-flex-align: center;
	-ms-flex-direction: column;
  display: flex;
  flex-direction: column;
  box-shadow: -2px 2px 10px #888888;
  align-items: center;
  border-radius: 10px;
  font-family: Ubuntu, sans-serif;
  height: 30rem;
  width: 20rem;
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 0 50px 100px 0;
  transition: all .200s ease-out  
}


/*Styling for toggle chat state*/
.cognigy-chat-state-closed, .cognigy-chat-state-open {
  border-radius: 50%;
  width: 60px;
  height: 60px;
  background-color: #333333;
  margin-right: 1rem;
  margin-bottom: 1rem;
  background-repeat: no-repeat;
  background-position: center;
  position: fixed;
  bottom: 0;
  right: 0;
}

.cognigy-chat-state-open {
  background-image: url('./images/close.svg');
}

.cognigy-chat-state-closed {
  background-image: url('./images/chat_bubble.svg');  
}

/*The header is comprised of an outer container which ensures that the
header content is only 90% of the total width of the chat box - just like the content container*/

.cognigy-chat-header-container, .cognigy-chat-header-container__open {
  background-color: #333333;
  color: white;
  width: 100%;
  display: flex;
  display: -ms-flexbox;
  -ms-flex-pack: center;
  justify-content: center;
}

.cognigy-chat-header-container {
  height: 100%;
}

.cognigy-header-avatar {
  width: 34px;
  height: 34px;
  margin: 0 0.5rem -4px 0.2rem;
  border-radius: 50%;
}

.cognigy-header-text {
  display: -ms-flexbox;
	-ms-flex-direction: column;
  display: flex;
  flex-direction: column;
}

.cognigy-header-title {
  font-size: 14px;
}

.cognigy-header-subtitle {
  color: hsla(0,0%,100%,.8);
  font-size: 12px;
  margin-top: 3px;
}

.cognigy-header-subtitle::before {
  content: "\2022";
  margin-right: 5px;
  font-weight: bold;
  color: #00FF00;
}

.cognigy-close-icon {
  width: 15px;
  height: 15px;
}

/*The close icon disappears when the header is closed*/
.cognigy-chat-header-container > .cognigy-chat-header > .cognigy-close-icon {
  display: none;
}

.cognigy-chat-header-container > .cognigy-chat-header {
  -ms-flex-pack: center;
  justify-content: center !important;
}

.cognigy-chat-header-container__open {
  height: 4rem;
  border-radius: 10px 10px 0 0;
  flex-shrink: 0;  
  -ms-flex-negative: 0;
}

.cognigy-chat-header {
  display: -ms-flexbox;
	-ms-flex-align: center;
  display: flex;
  align-items: center;
  width: 90%;
  height: 100%;
}

/*Container for chat content: Same function as header content defined above*/
.cognigy-chat-container {
  width: 100%;
  font-size: 12px;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-top: 10px;
  overflow-y: scroll;
  padding-bottom: 20px;
  background-color: white;
}

/*Style scrollbar*/
.cognigy-chat-container::-webkit-scrollbar {
  width: 0.5rem;
}

.cognigy-chat-container::-webkit-scrollbar-thumb {
  background-color: rgba(0,0,0,0.3);
  outline: 1px solid slategrey;
  border-radius: 20px;
  display: -ms-flexbox;
	-ms-flex-direction: column-reverse;
  flex-direction: column-reverse;
  display: flex;
}

.displayNone {
  display: none !important;
}

.visibilityHidden {
  visibility: hidden;
}

/*Below is styling for the form, input, button and window components*/
.cognigy-chat-form {
  display: -ms-flexbox;
  -ms-flex-pack: justify;
  -ms-flex-align: center;
  display: flex;
  justify-content: space-between;
  background-color: #f4f7f9;
  margin-bottom: 0;
  width: 100%;
  align-items: center;
  border-radius: 0 0 10px 10px;
  transition: background-color .2s ease,box-shadow .2s ease;
  height: 50px;
  min-height: 50px;
}

.cognigy-chat-input {
  background: #f4f7f9;
  color: #565867;
  resize: none;
  border: none;
  overflow: hidden;
  border-bottom: 0.1px solid rgba(0,0,0,0.1);
  font-family: Ubuntu, sans-serif;
  width: 100%;
  text-indent: 20px;
  padding: 20px 0 7px 0;
  border-radius: 0 0 10px 10px;
}

.cognigy-chat-input:focus {
  outline: none;
}

.cognigy-chat-input:focus {
  background-color: white;
}

.cognigy-chat-button  {
  border: 10px;
  border-radius: 20px;
  padding: 0.3rem;
  background-color: transparent;
  color: white;
  position: absolute;
  right: 0;
  cursor: pointer;
}

.cognigy-record-toggle-button {
  border: 10px;
  border-radius: 20px;
  padding: 0.3rem;
  background-color: transparent;
  color: white;
  position: absolute;
  right: 0;
  margin-right: 30px;
  cursor: pointer;  
}

.cognigy-chat-button:focus, .cognigy-record-toggle-button:focus {
  outline: none;
}

.cognigy-record-button {
  background-color: white;
  padding: 20px 30px;
  display: -ms-flexbox;
	-ms-flex-align: center;
  display: flex;
  align-items: center;
  background-image: url('./images/mic.gif');
  background-position: center;
  background-repeat: no-repeat;
}

/*Styling for messages sent by the user and received from the bot*/
.cognigy-chat-user-message-container {
  display: -ms-flexbox;
  -ms-flex-align: end;
  -ms-flex-pack: end;
  display: flex;
  word-break: break-word;
  justify-content: flex-end;
  margin-bottom: 0.5rem;
  align-items: flex-end;
  margin-right: 10px;
}

.cognigy-chat-bot-message-container {
  display: -ms-flexbox;
	-ms-flex-align: end;
  display: flex;
  word-break: break-word;
  margin: 0.3rem 0 0.3rem 10px;
  align-items: flex-end;
}

.cognigy-chat-user-message {
  background-color: #f1f0f0;
  border-radius: 20px 20px 4px 20px;
  padding: 10px 15px;
  margin: 0.5rem 0;
  color: rgba(0,0,0,0.8);
  max-width: 55%;  
}

.cognigy-chat-bot-message {
  background-color: #333333;
  border-radius: 20px 20px 20px 4px;
  padding: 10px 15px;
  max-width: 55%;  
  color: white;
}

/*Styling for avatars*/
.cognigy-chat-bot-avatar {
  height: 20px;
  min-width: 50px;
  max-width: 50px;
  /*Fix "air" at the bottom of svg and add margin to sides*/
  margin: 0 0.2rem -4px 0.2rem;
}

.cognigy-chat-user-avatar {
  margin: 0 0.4rem 0 0.2rem;
  height: 20px;
  min-width: 20px;
  max-width: 20px;
  border-radius: 20px;
}

.cognigy-send-icon, .cognigy-record-toggle-icon {
  width: 40px;
  height: 17px;
  opacity: 0.3;
}

